// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidenav should allow passing of custom className 1`] = `
.emotion-0 {
  border-right: 1px solid rgba(0, 0, 0, 0.11);
  background-color: white;
  color: #323232;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: all 0.3s cubic-bezier(0.77, 0.2, 0.05, 1);
  transition: all 0.3s cubic-bezier(0.77, 0.2, 0.05, 1);
  z-index: 300;
  max-width: 201px;
  min-width: 201px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  min-height: 0;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top: 1px solid rgba(0, 0, 0, 0.11);
  padding: 8px 20px;
  min-height: 40px;
  max-height: 40px;
  width: 100%;
}

.emotion-2:hover {
  background-color: rgba(0, 0, 0, 0.05);
}

.emotion-4 {
  cursor: pointer;
  overflow: hidden;
  padding-left: 8px;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
}

<SideBar
  className="test-class"
>
  <SideNavProvider
    className="test-class"
  >
    <SideNav
      className="test-class"
    >
      <SideNavBody
        className="test-class"
        isExpanded={true}
        size="regular"
      >
        <div
          className="test-class emotion-0 emotion-1"
          size="regular"
        >
          <SideNavFooter
            isExpanded={true}
            size="regular"
            toggleSideNav={[Function]}
            toggleStateLabels={
              Object {
                "collapse": "Collapse",
                "expand": "Expand",
              }
            }
          >
            <FooterWrapper
              isExpanded={true}
              size="regular"
              toggleSideNav={[Function]}
              tooltipContent="Expand"
            >
              <SideNavFooterContainer
                onClick={[Function]}
                size="regular"
              >
                <div
                  className="emotion-2 emotion-3"
                  onClick={[Function]}
                  size="regular"
                >
                  <Icon
                    icon="fas-chevron-left"
                    size="regular"
                  >
                    icon-chevron-left
                  </Icon>
                  <SideNavFooterLabel
                    size="regular"
                  >
                    <div
                      className="emotion-4 emotion-5"
                      size="regular"
                    >
                      Collapse
                    </div>
                  </SideNavFooterLabel>
                </div>
              </SideNavFooterContainer>
            </FooterWrapper>
          </SideNavFooter>
        </div>
      </SideNavBody>
    </SideNav>
  </SideNavProvider>
</SideBar>
`;

exports[`Sidenav should correctly apply styling 1`] = `
.emotion-0 {
  border-right: 1px solid rgba(0, 0, 0, 0.11);
  background-color: white;
  color: #323232;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: all 0.3s cubic-bezier(0.77, 0.2, 0.05, 1);
  transition: all 0.3s cubic-bezier(0.77, 0.2, 0.05, 1);
  z-index: 300;
  max-width: 201px;
  min-width: 201px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  min-height: 0;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top: 1px solid rgba(0, 0, 0, 0.11);
  padding: 8px 20px;
  min-height: 40px;
  max-height: 40px;
  width: 100%;
}

.emotion-2:hover {
  background-color: rgba(0, 0, 0, 0.05);
}

.emotion-4 {
  cursor: pointer;
  overflow: hidden;
  padding-left: 8px;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
}

<SideBar>
  <SideNavProvider>
    <SideNav>
      <SideNavBody
        isExpanded={true}
        size="regular"
      >
        <div
          className="emotion-0 emotion-1"
          size="regular"
        >
          <SideNavFooter
            isExpanded={true}
            size="regular"
            toggleSideNav={[Function]}
            toggleStateLabels={
              Object {
                "collapse": "Collapse",
                "expand": "Expand",
              }
            }
          >
            <FooterWrapper
              isExpanded={true}
              size="regular"
              toggleSideNav={[Function]}
              tooltipContent="Expand"
            >
              <SideNavFooterContainer
                onClick={[Function]}
                size="regular"
              >
                <div
                  className="emotion-2 emotion-3"
                  onClick={[Function]}
                  size="regular"
                >
                  <Icon
                    icon="fas-chevron-left"
                    size="regular"
                  >
                    icon-chevron-left
                  </Icon>
                  <SideNavFooterLabel
                    size="regular"
                  >
                    <div
                      className="emotion-4 emotion-5"
                      size="regular"
                    >
                      Collapse
                    </div>
                  </SideNavFooterLabel>
                </div>
              </SideNavFooterContainer>
            </FooterWrapper>
          </SideNavFooter>
        </div>
      </SideNavBody>
    </SideNav>
  </SideNavProvider>
</SideBar>
`;
